iPhone 5 spacing issue

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,12 +1,14 @@
 @import "./_partial.scss";
 
+$top-bar-spacing: 5em;
+
 body {
   margin: 0;
 }
 .page-wrapper {
   /* 5em is main top margin for fixed header,
   which does not affect spacing of other elements */
-  min-height: calc(100vh - 5em);
+  min-height: calc(100vh - $top-bar-spacing);
   position: relative;
 }
 .header {
@@ -42,7 +44,7 @@ body {
     margin-left: auto;
   }
 }
-@mixin main-content-invariant() {
+.main-content {
   line-height: 1.5;
   padding-bottom: 5em;
 
@@ -60,14 +62,12 @@ body {
 }
 @media only screen and (min-width: 540px) {
   .main-content {
-    @include main-content-invariant;
-    margin: 5em 20% 0;
+    margin: $top-bar-spacing 20% 0;
   }
 }
 @media only screen and (min-width: 360px) and (max-width: 540px) {
   .main-content {
-    @include main-content-invariant;
-    margin: 5em 2em 0;
+    margin: $top-bar-spacing 2em 0;
   }
   .header h1 {
     font-size: 28px;
@@ -75,8 +75,7 @@ body {
 }
 @media only screen and (min-width: 300px) and (max-width: 360px) {
   .main-content {
-    @include main-content-invariant;
-    margin: 4em 1em 0;
+    margin: $top-bar-spacing 1em 0;
   }
   .header h1 {
     font-size: 24px;
@@ -84,8 +83,7 @@ body {
 }
 @media only screen and (max-width: 300px) {
   .main-content {
-    @include main-content-invariant;
-    margin: 5em 1em 0;
+    margin: $top-bar-spacing 1em 0;
   }
   .header h1 {
     font-size: 20px;
